# codelite

./: .gitmodules  CMakeLists.txt  premake5.lua
.github/workflows/: ccccc.yml  check-format.yml  macos.yml  msys2.yml  ubuntu.yml
AutoSave/: CMakeLists.txt
CMakePlugin/: CMakeGenerator.cpp  CMakeLists.txt  CMakeSettingsManager.cpp
CallGraph/: CMakeLists.txt
ChatAI/: CMakeLists.txt
CodeFormatter/: CMakeLists.txt
CodeLite/: CMakeLists.txt  CTags.cpp  CTags.hpp  CompletionHelper.cpp  CompletionHelper.hpp  FontUtils.cpp  JSON.cpp  JSON.h  StringUtils.cpp  StringUtils.h  UIBreakpoint.hpp  archive.h  clAnagram.h  clBitset.hpp  clDirChanger.hpp  clEditorConfig.cpp  clEnvironment.hpp  clFileFinder.h  clFileName.cpp  clFilesFinder.h  clINIParser.cpp  clModuleLogger.hpp  clVersionString.cpp  clWildMatch.cpp  cl_calltip.cpp  cl_calltip.h  cl_command_event.h  cl_config.cpp  cl_defs.h  cl_process.cpp  cl_standard_paths.cpp  cl_standard_paths.h  codelite_exports.h  compiler_command_line_parser.cpp  ctags_manager.cpp  ctags_manager.h  dirtraverser.h  file_logger.cpp  file_logger.h  fileextmanager.cpp  (+16 more)
CodeLite/AsyncProcess/: TerminalEmulator.cpp  asyncprocess.cpp  asyncprocess.h  winprocess_impl.cpp
CodeLite/Console/: clConsoleCMD.cpp  clConsoleGnomeTerminal.cpp
CodeLite/Cxx/: CxxCodeCompletion.cpp  CxxExpression.hpp  CxxLexerAPI.h  CxxPreProcessor.cpp  CxxPreProcessor.h  CxxPreProcessorScanner.cpp  CxxPreProcessorScanner.h  CxxVariable.cpp  CxxVariable.h  CxxVariableScanner.h  cpptoken.cpp  cpptoken.h  cppwordscanner.cpp  cppwordscanner.h
CodeLite/LSP/: CompletionItem.cpp  CompletionItem.h  DidChangeTextDocumentRequest.h  DidCloseTextDocumentRequest.h  DidOpenTextDocumentRequest.cpp  DidOpenTextDocumentRequest.h  DidSaveTextDocumentRequest.h  DocumentSymbolsRequest.cpp  DocumentSymbolsRequest.hpp  FindReferencesRequest.hpp  GotoDeclarationRequest.h  GotoDefinitionRequest.cpp  GotoDefinitionRequest.h  GotoImplementationRequest.cpp  GotoImplementationRequest.h  IPathConverter.hpp  InitializeRequest.cpp  JSONObject.h  Message.cpp  Message.h  MessageWithParams.h  Request.h  ResponseMessage.cpp  SemanticTokensRquest.cpp  SignatureHelpRequest.h  WorkspaceSymbolRequest.hpp  basic_types.cpp  basic_types.h  json_rpc_params.cpp  json_rpc_params.h  json_rpc_results.h
CodeLite/PHP/: PHPDocComment.cpp  PHPDocComment.h  PHPDocParam.cpp  PHPDocParam.h  PHPDocProperty.h  PHPDocVar.cpp  PHPDocVisitor.cpp  PHPDocVisitor.h  PHPEntityBase.cpp  PHPEntityBase.h  PHPEntityClass.cpp  PHPEntityFunction.cpp  PHPEntityNamespace.cpp  PHPEntityVariable.cpp  PHPExpression.cpp  PHPLookupTable.cpp  PHPLookupTable.h  PHPSourceFile.cpp  PHPSourceFile.h
CodeLite/Platform/: MSYS2.cpp
CodeLiteDiff/: CMakeLists.txt
ContinuousBuild/: CMakeLists.txt
Copyright/: CMakeLists.txt
CxxParserTests/: CMakeLists.txt  main.cpp  tester.cpp
DatabaseExplorer/: CMakeLists.txt  DbSettingDialog.cpp  DbSettingDialog.h  DbViewerPanel.cpp  DbViewerPanel.h  IDbAdapter.h  IDbItem.h  LogDialog.h  MySqlDbAdapter.cpp  MySqlDbAdapter.h  MySqlType.h  PostgreSqlDbAdapter.cpp  PostgreSqlDbAdapter.h  SqliteDbAdapter.cpp  SqliteDbAdapter.h  SqliteType.h  column.cpp  column.h  constraint.h  database.h  databaseexplorer.cpp  db_explorer_settings.cpp  db_explorer_settings.h  dbconnection.cpp  dbconnection.h  dbitem.h  dumpclass.h  table.cpp  table.h
DebugAdapterClient/: BreakpointsHelper.cpp  BreakpointsHelper.hpp  CMakeLists.txt  RunInTerminalHelper.cpp  RunInTerminalHelper.hpp
Debugger/: CMakeLists.txt  dbgcmd.cpp  debuggergdb.cpp
Docker/: CMakeLists.txt  clDockerSettings.cpp  clDockerWorkspaceSettings.cpp  docker.cpp
EOSWiki/: CMakeLists.txt  eoswiki.cpp
EditorConfigPlugin/: CMakeLists.txt
ExternalTools/: CMakeLists.txt
Gizmos/: CMakeLists.txt  newclassdlg.cpp  newwxprojectdlg.cpp
HelpPlugin/: CMakeLists.txt  helpplugin.cpp
Interfaces/: debuggerobserver.h  ieditor.h  imanager.h  plugin.h
LanguageServer/: CMakeLists.txt  LanguageServer.project
LiteEditor/: CMakeLists.txt  CompilerMainPage.cpp  DebuggerDisassemblyTab.cpp  app.cpp  assignedfilesmodel.cpp  breakpointsmgr.cpp  cl_editor.cpp  cl_editor.h  context_cpp.cpp  fileview.cpp  frame.cpp  mainbook.cpp  manager.cpp  options_dlg2.cpp  pluginmanager.cpp  ps_build_events_page.cpp  quickfindbar.cpp  reconcileproject_liteeditor_bitmaps.cpp  replaceinfilespanel.cpp
MacBundler/: CMakeLists.txt  macbundler.cpp
MemCheck/: CMakeLists.txt
Outline/: CMakeLists.txt
PHPLint/: CMakeLists.txt  lintoptions.cpp
PHPRefactoring/: CMakeLists.txt
Plugin/: CMakeLists.txt  ColoursAndFontsManager.cpp  NodeJSLocator.cpp  VirtualDirectorySelectorDlg.cpp  bookmark_manager.cpp  clAuiBook.cpp  clCodeLiteRemoteProcess.cpp  clEditorWordCharsLocker.h  clRemoteDirCtrl.hpp  cl_editor_tip_window.cpp  clean_request.cpp  compile_request.cpp  custombuildrequest.cpp  editor_config.cpp  globals.cpp  globals.h  lexer_configuration.cpp  macromanager.cpp  phpoptions.cpp  project.cpp  project.h  sessionmanager.h  sftp_settings.cpp  sftp_ui_sftp_bitmaps.cpp
QmakePlugin/: CMakeLists.txt
Remoty/: CMakeLists.txt  RemotyWorkspace.cpp  clRemoteTerminal.cpp
Rust/: CMakeLists.txt
SFTP/: CMakeLists.txt
SmartCompletion/: CMakeLists.txt
SnipWiz/: CMakeLists.txt  snipwiz.cpp
SpellChecker/: CMakeLists.txt  SpellCheck.project  spellcheck.cpp
Subversion2/: CMakeLists.txt  subversion2.cpp  subversion2_subversion2_bitmaps.cpp
Tail/: CMakeLists.txt  TailUI_tail_bitmaps.cpp
UnitTestCPP/: CMakeLists.txt
WebTools/: CMakeLists.txt
WordCompletion/: CMakeLists.txt
ZoomNavigator/: CMakeLists.txt
abbreviation/: CMakeLists.txt  abbreviation.cpp
codelite-generate-themes/: CMakeLists.txt
codelite_make/: CMakeLists.txt
codelite_vim/: CMakeLists.txt  vim_manager.h
codelitephp/: CMakeLists.txt
cppchecker/: CMakeLists.txt
cscope/: CMakeLists.txt
ctagsd/: CMakeLists.txt  ctagsd.project  ctagsd_app.project
git/: CMakeLists.txt  git.cpp  gitentry.cpp
submodules/: CMakeLists.txt
translations/: CMakeLists.txt
wxcrafter/: CMakeLists.txt
wxformbuilder/: CMakeLists.txt
(+72 files in other folders)
